--- a/css/main.css
+++ b/css/main.css
@@ -1678,7 +1678,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #933b67;
+  background: #1affa4;
 }
 .links-of-blogroll {
   font-size: 13px;
